tests/errors/unexpected_character.drast
// # TEST: unexpected character is rejected
// # EXPECT: error
// # ERROR_CONTAINS: unexpected character

main, int
	value = 1 $ 2
	return value
